--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,15 +3,39 @@ html {
 }
 
 body {
-
+  margin: 0;
 }
 
-flex {
-
+.flex {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 /* HEADER */
+header {
+ width: 100%;
+ height: 69px;
+ border: 1px solid pink;
+}
+
+.logo {
+  border: 1px solid aquamarine;
+  height: 32px;
+}
+
+nav {
+  border: 1px solid aquamarine;
+}
 /* BANNER */
+.banner, .content {
+  border: 1px solid pink;
+  background-color: lightgrey;
+}
+.banner img, .content img {
+  max-width: 60%;
+  border: 1px solid aquamarine;
+}
 /* CONTENT */
 /* INFO BAR */
 /* COURSES CATALOG */
