--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,34 +3,42 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: auto;
 }
 
 .flex {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+}
+
+.container {
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 /* HEADER */
 header {
  width: 100%;
- height: 69px;
+ height: 64px;
  border: 1px solid pink;
+ justify-content: space-between;
+ align-items: center;
 }
 
 .logo {
   border: 1px solid aquamarine;
   height: 32px;
+  display: flex;
+  align-items: center;
 }
 
 nav {
   border: 1px solid aquamarine;
 }
 /* BANNER */
-.banner, .content {
+.banner {
   border: 1px solid pink;
   background-color: lightgrey;
+  align-items: center;
 }
 .banner img, .content img {
   max-width: 60%;
@@ -42,7 +50,15 @@ nav {
 }
 
 /* CONTENT */
+
 /* INFO BAR */
+
+.item {
+  border: 1px solid purple;
+}
 /* COURSES CATALOG */
 /* THESIS EXHIBIT */
 /* FOOTER */
+.copyright, .terms {
+  border: 1px solid black;
+}
