--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,8 +40,8 @@ nav {
   background-color: lightgrey;
   align-items: center;
 }
-.banner img, .content img {
-  max-width: 60%;
+.student img {
+  width: 60%;
   border: 1px solid aquamarine;
 }
 
@@ -50,11 +50,24 @@ nav {
 }
 
 /* CONTENT */
+.content {
+  
+}
 
 /* INFO BAR */
-
+.info {
+  width: 40%;
+  border: solid 1px green;
+}
 .item {
   border: 1px solid purple;
+  display: flex;
+  align-items: center;
+  width: 65%;
+}
+
+.item img {
+  width: 35%;
 }
 /* COURSES CATALOG */
 /* THESIS EXHIBIT */
