--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -70,6 +70,20 @@ nav {
   padding: 16px;
 }
 /* COURSES CATALOG */
+.catalog {
+  padding: 32px 72px;
+}
+
+.course {
+  border: 1px solid yellow;
+  width: 60%;
+  align-items: center;
+}
+
+.course img {
+  height: auto;
+  max-width: 30%;
+}
 /* THESIS EXHIBIT */
 /* FOOTER */
 .copyright, .terms {
