--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  margin: auto;
+  margin: 0 auto;
 }
 
 .flex {
@@ -30,6 +30,7 @@ header {
 
 nav {
   border: 1px solid aquamarine;
+  padding-right: 24px;
 }
 /* BANNER */
 .banner {
@@ -40,16 +41,17 @@ nav {
 .student img {
   width: 60%;
   border: 1px solid aquamarine;
-  padding-left: 24px;
 }
 
 .descr {
   border: 1px solid blue;
 }
-
+.student {
+  padding: 32px 24px;
+}
 /* CONTENT */
 .content {
-
+  width: 100%;
 }
 
 /* INFO BAR */
@@ -77,7 +79,7 @@ nav {
 
 .course {
   border: 1px solid yellow;
-  width: 33%;
+  width: 25%;
   display: inline-block;
   flex-grow: 1;
 }
@@ -87,7 +89,20 @@ nav {
   width: 100%;
 }
 /* THESIS EXHIBIT */
+.video {
+  width: 60%;
+  padding: 32px 24px 24px;
+}
+video {
+  width: 60%;
+  overflow: hidden;
+}
 /* FOOTER */
+footer {
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
 .copyright, .terms {
   border: 1px solid black;
 }
