--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,6 @@
 html {
-
+  font-family: Helvetica;
+  font-size: 16px;
 }
 
 body {
@@ -14,7 +15,7 @@ body {
 /* HEADER */
 header {
  width: 100%;
- height: 64px;
+ height: 4rem;
  border: 1px solid pink;
  justify-content: space-between;
  align-items: center;
@@ -22,15 +23,15 @@ header {
 
 .logo {
   border: 1px solid aquamarine;
-  height: 32px;
+  height: 2rem;
   display: flex;
   align-items: center;
-  padding-left: 24px;
+  padding-left: 1.5rem;
 }
 
 nav {
   border: 1px solid aquamarine;
-  padding-right: 24px;
+  padding-right: 2rem;
 }
 /* BANNER */
 .banner {
@@ -38,16 +39,26 @@ nav {
   background-color: lightgrey;
   align-items: center;
 }
+
+.banner h1 {
+  font-weight: bold;
+  font-size: 2rem;
+}
 .student img {
-  width: 60%;
+  max-width: 100%;
   border: 1px solid aquamarine;
+  height: auto;
+  display: block;
 }
 
 .descr {
   border: 1px solid blue;
 }
 .student {
-  padding: 32px 24px;
+  padding: 2rem 1.5rem;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
 }
 /* CONTENT */
 .content {
@@ -73,7 +84,7 @@ nav {
 }
 /* COURSES CATALOG */
 .catalog {
-  padding: 32px 72px;
+  padding: 2rem 4.5rem;
   flex-wrap: wrap;
 }
 
@@ -82,20 +93,29 @@ nav {
   width: 25%;
   display: inline-block;
   flex-grow: 1;
+  margin-left: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .course img {
   height: auto;
   width: 100%;
+  margin-bottom: 1rem;
 }
 /* THESIS EXHIBIT */
 .video {
-  width: 60%;
-  padding: 32px 24px 24px;
+  padding: 2rem 1.5rem 1.5rem;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+
 }
 video {
-  width: 60%;
-  overflow: hidden;
+  max-width: 100%;
+  border: 1px solid aquamarine;
+  height: auto;
+  display: block;
+
 }
 /* FOOTER */
 footer {
