--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 html {
-  font-family: Helvetica;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
 }
 
@@ -24,9 +24,10 @@ h3 {
 header {
  width: 100%;
  height: 4rem;
- border: 1px solid pink;
+ border: 1px solid blue;
  justify-content: space-between;
  align-items: center;
+ background-color: white;
 }
 
 .logo {
@@ -46,13 +47,15 @@ nav {
   border: 1px solid pink;
   background-color: lightgrey;
   align-items: center;
-
 }
 
-.banner h1 {
-  font-weight: bold;
-  font-size: 2rem;
+.student {
+  padding: 2rem 1.5rem;
+  width: 60%;
+  height: auto;
+  overflow: hidden;
 }
+
 .student img {
   max-width: 100%;
   border: 1px solid aquamarine;
@@ -62,39 +65,66 @@ nav {
 
 .descr {
   border: 1px solid blue;
-  flex-direction: column;
-  align-items: center;
   width: 40%;
 }
 
-.descr p {
-  background-color: darkgrey;
+.button {
+  border: 1px solid red;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 55%;
+}
+
+.button h1 {
+  font-weight: bold;
+  font-size: 2rem;
+  padding-bottom: 0.5rem;
+}
+
+.button span, .item p, .item a, .item h3 {
+  padding-bottom: 0.5rem;
+}
+
+.button p {
+  background-color: #282C2F;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  width: 100%;
   text-align: center;
+  width: 100%;
+  color: white;
 }
-.student {
-  padding: 2rem 1.5rem;
-  width: 60%;
-  height: auto;
-  overflow: hidden;
-}
+
 /* CONTENT */
 .content {
   width: 100%;
   align-items: flex-start;
+  margin-bottom: 2rem;
+}
+
+.student h2 {
+  padding-top: 2rem;
+}
+
+.student p {
+  padding-top: 1.5rem;
+  opacity: 0.8;
+  padding-bottom: 2rem;
+}
+
+.student span {
+  font-size: 0.8rem;
 }
 
 /* INFO BAR */
 .info {
   width: 40%;
-  border: solid 1px green;
+  border-left: solid 0.0625rem lightgrey;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-right: 0.5rem;
 }
 .item {
-  border: 1px solid purple;
+  border: 0.0625rem solid lightgrey;
   display: flex;
   align-items: center;
   width: 100%;
@@ -103,12 +133,17 @@ nav {
 .item img {
   width: 35%;
   height: auto;
-  padding: 16px;
+  padding: 1rem;
 }
 
-.item text {
+.text {
   width: 65%;
 }
+
+.text a {
+  color: #3393FF;
+}
+
 
 /* COURSES CATALOG */
 .title {
@@ -116,46 +151,83 @@ nav {
   margin-bottom: 2rem;
   justify-content: center;
 }
+
 .catalog {
   padding: 2rem 4.5rem;
   flex-wrap: wrap;
+  background-color: lightgrey;
 }
 
 .course {
   border: 1px solid yellow;
   width: 25%;
+  align-items: baseline;
   display: inline-block;
   flex-grow: 1;
   margin-left: 2rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
+  line-height: 1rem;
+  overflow: hidden;
+  background-color: white;
 }
 
 .course img {
   height: auto;
   width: 100%;
-  margin-bottom: 1rem;
+  display: block;
 }
+.detail {
+  padding: 1rem 1rem 1.5rem 1rem;
+}
+.detail p {
+  padding-top: 0.5rem;
+}
+
 /* THESIS EXHIBIT */
 .video {
   padding: 2rem 1.5rem 1.5rem;
   width: 60%;
   height: auto;
   overflow: hidden;
-
 }
+
+.video h3 {
+  padding-top: 2rem;
+}
+
+.video p {
+  padding-top: 0.5rem;
+}
+
 video {
-  max-width: 100%;
+  width: 100%;
   border: 1px solid aquamarine;
   height: auto;
   display: block;
-
 }
 /* FOOTER */
 footer {
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  height: 4rem;
+  border: 0.0625rem solid lightgrey;
+}
+
+footer span{
+  font-size: 0.7rem;
+  letter-spacing: 0.0625rem;
+  opacity: 0.6;
 }
 .copyright, .terms {
   border: 1px solid black;
+  margin-top: 1rem;
+}
+
+.copyright {
+  padding-left: 2rem;
+}
+
+.terms span{
+padding-right: 0.5rem;
 }
