--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
 }
 
 .flex {
@@ -24,14 +24,16 @@ h3 {
 header {
  width: 100%;
  height: 4rem;
- border: 1px solid blue;
  justify-content: space-between;
  align-items: center;
  background-color: white;
+ position: fixed;
+ top: 0;
+ z-index: 100;
+ border-bottom: 0.0625rem solid lightgrey;
 }
 
 .logo {
-  border: 1px solid aquamarine;
   height: 2rem;
   display: flex;
   align-items: center;
@@ -39,14 +41,23 @@ header {
 }
 
 nav {
-  border: 1px solid aquamarine;
   padding-right: 2rem;
 }
+
+/* CONTAINER */
+
+.container {
+  max-width: 60rem;
+  margin: auto;
+  position: relative;
+}
+
 /* BANNER */
 .banner {
-  border: 1px solid pink;
   background-color: lightgrey;
   align-items: center;
+  margin-top: 2rem;
+  padding-top: 2rem;
 }
 
 .student {
@@ -58,12 +69,11 @@ nav {
 
 .student img {
   max-width: 100%;
-  border: 1px solid aquamarine;
   height: auto;
   display: block;
 }
 
-.descr {
+.description {
   border: 1px solid blue;
   width: 40%;
 }
@@ -124,7 +134,6 @@ nav {
   padding-right: 0.5rem;
 }
 .item {
-  border: 0.0625rem solid lightgrey;
   display: flex;
   align-items: center;
   width: 100%;
@@ -159,7 +168,6 @@ nav {
 }
 
 .course {
-  border: 1px solid yellow;
   width: 25%;
   align-items: baseline;
   display: inline-block;
@@ -201,7 +209,6 @@ nav {
 
 video {
   width: 100%;
-  border: 1px solid aquamarine;
   height: auto;
   display: block;
 }
@@ -220,7 +227,6 @@ footer span{
   opacity: 0.6;
 }
 .copyright, .terms {
-  border: 1px solid black;
   margin-top: 1rem;
 }
 
