--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -61,16 +61,15 @@ nav a:active {
 }
 
 @media only screen and (max-width:480px) {
-  .logo span {
-    display: none;
-  }
-  nav {
+
+  nav, .logo {
     display: none;
   }
 
   .mobile-nav {
     display: flex;
     justify-content: space-around;
+    width: 100%;
   }
 
 }
@@ -146,6 +145,7 @@ nav a:active {
 @media only screen and (max-width:480px) {
   .banner {
     flex-direction: column;
+    padding-bottom: 2rem;
   }
 
   .descr {
@@ -225,16 +225,33 @@ nav a:active {
   text-decoration: underline;
 }
 
+@media only screen and (min-width:480px) {
+  .mobile {
+    display: none;
+  }
+}
+
 @media only screen and (max-width:480px) {
   .info {
     width: 100%;
+    padding-bottom: 2rem;
   }
   .item {
     flex-direction: column;
     width: 100%;
+    height: auto;
+    overflow: hidden;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
   }
-  .item img {
-    width: 100%;
+  .item .desktop {
+    display: none;
+  }
+
+  .item .mobile {
+    width: 90%;
+    height: auto;
+    display: block;
   }
 }
 
@@ -288,6 +305,7 @@ nav a:active {
 
   .catalog {
     flex-flow: column nowrap;
+    align-items: center;
   }
   .title {
    margin-bottom: 1rem;
