--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ header {
  height: 4rem;
  justify-content: space-between;
  align-items: center;
- background-color: white;
+ background-color: hsl(0, 0%, 100%);
  position: fixed;
  top: 0;
  z-index: 100;
@@ -52,7 +52,7 @@ nav a {
 }
 nav a:hover {
   background-color: hsl(212, 100%, 70%);
-  color: white;
+  color: hsl(0, 0%, 100%);
 }
 nav a:active {
   opacity: 0.6;
@@ -143,7 +143,7 @@ nav a:active {
   padding-bottom: 0.5rem;
   text-align: center;
   width: 100%;
-  color: white;
+  color: hsl(0, 0%, 100%);
   text-decoration: none;
 }
 .button a:hover {
@@ -293,7 +293,7 @@ nav a:active {
   margin-bottom: 2rem;
   line-height: 1rem;
   overflow: hidden;
-  background-color: white;
+  background-color: hsl(0, 0%, 100%);
   border: 0.0125rem solid hsl(0, 0%, 95%);
 }
 
